--- a/law/2022-6-1.md
+++ b/law/2022-6-1.md
@@ -69,3 +69,10 @@ https://www.caa.go.jp/policies/policy/consumer_transaction/specified_commercial_
 外国の第三者に個人データを提供する際の義務
 1本人同意あれば移転先の国の個人情報保護に関する制度等の情報提供
 2継続的、適正な取扱体制が整備されている事業者への提供であれば取扱情報の定期的な確認 本人の求めに応じて情報提供
+
+
+# 改正個人情報保護法（APPI）
+
+企業が日本国内のユーザーの PRI を「個人情報」に関連付ける可能性が高い第三者に提供する際、企業は、データの受領者がデータを処理することについてデータ主体から同意を得て記録していることを、データの受領者に確認することが義務付けられます。PRI は通常、それ自体は特定の個人を識別しない識別子（Cookie ID など）によって収集され、（個人情報保護法で定義される）個人データと関連付けられる形で保存されることはありません。
+
+Google プラットフォームで提供されるサービスの利用に関連して、日本国内のユーザーに関する PRI（ポリシーでは「個人を特定できないユーザー情報」と呼ばれます）を Google から受け取る場合は、その PRI を、個人を特定できる情報と統合することは禁止されます。ただし、こうした処理に先立ち、PRI を提供するユーザーから法律で義務付けられた同意を得ており、処理に関する正確かつ完全な情報を Google データ保護規約のトラブルシューティングを介して Google に提供している場合は、この限りではありません。
